--- a/Design Assignment 1 1A-home-search.jpg/css/layout.css
+++ b/Design Assignment 1 1A-home-search.jpg/css/layout.css
@@ -26,6 +26,7 @@
     padding-left: 50px;
     float: left;
     padding-top: 35px;
+    font-size: 12px;
 }
 
 
@@ -52,6 +53,7 @@
     padding-left: 172px;
     padding-top: 32px;
     color: #808a89;
+    font-size: 20px;
 }
 .header-bottom-right{
     float: right;
@@ -63,6 +65,7 @@
     padding-left: 9px;
     list-style-type: none;
     color: #808a89;
+    font-size: 13px;
 }
 .arrow-image{
     float: left;
@@ -74,10 +77,22 @@
 .main-body{
     width: 1170px;
     height: 1479px;
-    
+    margin:auto;
+}
+.body-content{
+    padding-top: 41px;
 }
 
-
+.body-content h1{
+    color: #e6513d;
+ 
+    width: 100%;
+    text-align: left;
+}
+.details{
+    text-align: justify;
+    display:block;
+}
 .footer-ruler{
     height: 10px;
 }
@@ -102,6 +117,12 @@
     float: left;
     list-style-type: none;
     padding-left: 29px;
+}
+.footer-bottom-left{
+    float: left;
+    padding-left : 168px;
+    padding-top : 22px;
+    color: white;
 }
 
 .clearfix{
