--- a/Design _Assignment_1_1A-home-search.jpg/css/layout.css
+++ b/Design _Assignment_1_1A-home-search.jpg/css/layout.css
@@ -93,6 +93,10 @@
     text-align: justify;
     display:block;
 }
+.col3-left{
+    float: left;
+    text-align: left;
+}
 .footer-ruler{
     height: 10px;
 }
