--- a/Design_Assignment_1_1A-home-search/css/reset.css
+++ b/Design_Assignment_1_1A-home-search/css/reset.css
@@ -1,11 +1,5 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: Arial;
-}
-.wrapper{
-    margin: auto;
-    width: 1500px;
-    height: auto;
-    text-align: center;
+    font-family: arial;
 }
