final project push1

--- a/JS-FINAL-PROJECT/style.css
+++ b/JS-FINAL-PROJECT/style.css
@@ -2,3 +2,84 @@
   margin: 0px;
   padding: 0px;
 }
+
+body{
+  margin: 0px auto;
+}
+
+.banner{
+  height: 264px;
+  width: 1366px;
+  display: block;
+}
+
+header{
+  background: #1e6022;
+  text-align: center;
+  color: white;
+  height: 50px;
+  margin-bottom: 10px;
+}
+
+header h1{
+  padding: 10px 0px;
+}
+
+.banner{
+  border-top: 5px solid #1e6022;
+  border-bottom: 5px solid #1e6022;
+  margin: 0px auto;
+  overflow: hidden;
+}
+
+.banner-imgage{
+  height: 100%;
+  width: 1366px;
+}
+
+nav{
+  margin: 10px auto;
+  margin-left: 100px;
+  display: inline-block;
+}
+
+nav ul li{
+  float: left;
+  list-style-type: none;
+  padding-right: 20px;
+}
+
+main{
+  margin: 10px auto;
+  width: 1166px;
+  margin-left: 100px;
+  border: 2px solid #1e6022 ;
+}
+
+.sidebar{
+  width: 400px;
+  float: left;
+  height: 800px;
+  background: #1e6022;
+}
+
+.sidebar ul{
+  padding-top: 30px;
+}
+
+.sidebar ul li{
+  list-style-type: none;
+  color: white;
+  padding-top: 20px;
+  padding-left: 50px;
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.main-content{
+  width: 950px;
+  float: right;
+  /* height: 796px; */
+  border: 2px solid #1e6022 ;
+}
